fix(countdown): fix outer margin on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -308,7 +308,7 @@ button:hover {
 }
 .countdown {
   display: grid;
-  margin: 0 1rem 7rem 0;
+  margin: 0 1rem 7rem;
   gap: 5rem 2.4rem;
   grid-template-columns: repeat(4, 1fr);
   color: var(--soft-red);
