--- a/scss/base/_html.scss
+++ b/scss/base/_html.scss
@@ -189,7 +189,6 @@ button {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  // @include debug;
   max-width: 690px;
   min-height: 100vh;
   margin: auto auto;
@@ -279,7 +278,7 @@ button {
 
 .countdown {
   display: grid;
-  margin: 0 1rem 7rem 0;
+  margin: 0 1rem 7rem;
   gap: 5rem 2.4rem;
   grid-template-columns: repeat(4, 1fr);
   color: var(--soft-red);
